Fix links, add spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,10 @@ ol, ul {
 	list-style: none;
 }
 
+li:not(:last-child) {
+    margin-bottom: 5px;
+}
+
 blockquote, q {
 	quotes: none;
 }
